[project]
name = "llm-cli"
version = "0.1.0"
description = "LLM API Client Tool"
authors = [
    {name = "Yoshihiro Ando",email = "yosh5295@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filetype (>=1.2.0,<2.0.0)",
    "prompt-toolkit (>=3.0.48,<4.0.0)",
    "pypdf (>=5.1.0,<6.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
